# ea

./: .dockerignore  .gitignore  .replit  DEPLOY_DOKPLOY.md  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  replit.md
attached_assets/: Pasted-1-3-Dynamic-Prompting-for-Unparalleled-Question-Diversity-To-ensure-the-dataset-s-richness-the-Que-1761214324421_1761214324422.txt  Pasted-You-are-an-expert-level-software-architect-and-Python-developer-Your-task-is-to-design-and-build-a--1761212804127_1761212804128.txt
data/: training_records.db
finetuner/: .gitignore  DEQUANTIZATION_FIX.md  FIXED_SKIP_FINETUNE.md  POST_TRAINING_GUIDE.md  QUICK_REFERENCE.md  README.md  RECOVERY_GUIDE.md  check_quantization.py  clean_quantization_artifacts.py  clean_temp_model.sh  convert_to_gguf_manual.py  create_env.sh  dequant_and_convert.py  direct_gguf_convert.py  example_data.jsonl  find_problematic_tensor.py  finetune.sh  fix_missing_config.py  inspect_model.py  progress_monitor.sh  proper_dequantize.py  pyproject.toml  quantize_direct.py  quantize_only.sh  quick_fix_and_quantize.sh  remove_corrupted_tensor.py  requirements.txt  robust_dequantize.py  simple_convert.sh  test_gguf.sh  test_model.py
finetuner/src/: __init__.py  data_loader.py  finetune.py  quantize.py  run_finetune.py
src/api/: app.py  routes.py
src/core/: database.py  llm_client.py  pipeline.py  state_manager.py
templates/: dashboard.html
