[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "aioredis>=2.0.1",
    "fastapi>=0.119.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "redis>=7.0.0",
    "uvicorn[standard]>=0.38.0",
]
