[project]
name = "finetuner"
version = "0.1.0"
description = "Fine-tune DeepSeek-V2-Lite with custom dataset and quantize to GGUF"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "python-dotenv>=1.0.0",
    "transformers>=4.36.0",
    "datasets>=2.15.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.42.0",
    "scipy>=1.11.0",
    "unsloth[colab-new]>=2024.1",
    "xformers>=0.0.23",
    "trl>=0.7.4",
    "huggingface-hub>=0.19.0",
    "gguf>=0.2.0",
    "llama-cpp-python>=0.2.20",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
finetune = "src.finetune:main"
quantize = "src.quantize:main"
run-finetune = "src.run_finetune:main"

